Fixed random scrollbar issue for difficulty chart

--- a/src/styles/components/blocksChart.scss
+++ b/src/styles/components/blocksChart.scss
@@ -1,4 +1,8 @@
 .blocks-chart-container {
     max-width: 100%;
     overflow-x: auto;
+
+    & > div {
+        overflow: hidden;
+    }
 }
